# fuzzy-logic-engine-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish_tags_to_crates_io.yaml
examples/: gas_burner.rs  it_department_decision__build_vs_buy.rs  motor_control.rs  private_financial_decisions_at_home.rs  restaurant_tip_level.rs  robotic_behaviours__abstacle_avoidance.rs  smart_irrigation_in_iot_farming.rs  smart_office_energy_management.rs  steering_wheel_in_autonomous_car.rs  tip.rs
src/: fis.rs  lib.rs  math_helpers.rs  membership.rs  output.rs  rule.rs  term.rs  variable.rs
tests/: fis_tests.rs  math_helpers_tests.rs  membership_tests.rs  output_tests.rs  rule_tests.rs  term_tests.rs  variable_tests.rs
